--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,11 @@
 version: '3'
 services:
-  api:
-    build: ./server
-    # env_file: /* Optional, if you want/need a dotenv file */
-    #   - .env
-    environment:
-      - PORT=4000
+  my-service:
+    container_name: my-container-name
+    image: my-image:latest
     ports:
-      - '4000:4000'
-      - '9229:9229'
+      - "4000:4000"
+      - '5173:5173'
     volumes:
       - .:/usr/src/app:cached
     command: ['npm', 'run', 'server:dev']
